<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/cloud_problem" />

        <TextView
            android:id="@+id/err_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_image"
            android:layout_centerHorizontal="true"
            android:text="@string/error"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crt_crd_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/err_msg"
            android:layout_margin="10sp"
            android:textAlignment="center"
            android:text="@string/create_card_hint"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/connect_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/crt_crd_hint"
            android:text="@string/connection_hint"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_margin="10sp"/>

        <TextView
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connect_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="Try Again"
            android:textSize="25sp"
            android:textStyle="italic"
            android:textColor="@color/accent"/>
    </RelativeLayout>

</RelativeLayout>