<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conversion_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#16bdbdbd"
    tools:context="com.bethel.eyo.kryptobash.activities.ConversionScreenActivity">

    <include
        android:id="@+id/toolbar_conv"
        layout="@layout/app_bar"/>

    <ImageView
        android:id="@+id/pink_btc"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_pink_btc"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conv_instr"
            android:textAlignment="center"
            android:layout_margin="10sp"
            android:layout_marginTop="70dp"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/quote_curr"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="65dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="USD 6076.78"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/edit_bg"/>

        <EditText
            android:id="@+id/base_curr"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="125dp"
            android:hint="1 BTC"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"/>

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="7sp"
            android:background="@color/accent"
            android:textSize="17sp"
            android:text="Done"
            android:textColor="@color/icons"
            android:textStyle="bold"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="5sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto_slogan"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <ImageView
            android:layout_width="120sp"
            android:layout_height="90sp"
            android:src="@drawable/crypto_compare"/>

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10sp"
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:src="@drawable/andela_logo"/>


    </RelativeLayout>

    <include
        android:id="@+id/error_screen"
        layout="@layout/error_layout"
        android:visibility="invisible"/>

</LinearLayout>
